include_directories (${TRLIB_SOURCE_DIR}/TR_INC) 
file(GLOB files "*.c")
file(GLOB api_files "./API/*.c")
file(GLOB lord_files "./LORD/*.c")
file(GLOB parsing_files "./PARSING/*.c")
file(GLOB util_files     "./UTILS/*.c")
file(GLOB strong_files     "./STRONG/*.c")
if (MSVC)
list(APPEND api_files ../TR_BUILD/trlib.def)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /D _ROUT")
endif()
if (CMAKE_COMPILER_IS_GNUCXX)
message("gcc used")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DTHREAD_SAFE -O2 -Wall")
else()
add_definitions(-DTHREAD_SAFE)
endif()
if(NOT CMAKE_BUILD_TYPE MATCHES "Release")
add_definitions(-D_ROUT)
set(CMAKE_VERBOSE_MAKEFILE  ON) 
endif()
add_library (TrLib SHARED ${files} ${api_files} ${lord_files} ${parsing_files} ${util_files})
