include_directories (${TRLIB_SOURCE_DIR}/TR_INC) 
file(GLOB geometric_geodesy_files "./GEOMETRIC_GEODESY/*.c")
file(GLOB physical_geodesy_files "./PHYSICAL_GEODESY/*.c")
file(GLOB utilities_files     "./UTILITIES/*.c")
file(GLOB generic_transformation_files     "./GENERIC_TRANSFORMATION/*.c")
file(GLOB specific_transformation_files     "./SPECIFIC_TRANSFORMATION/*.c")
file(GLOB metadata_files "./METADATA/*.c")
file(GLOB api_files "./API/*.c")
file(GLOB lord_files "./LORD/*.c")
file(GLOB strong_files     "./STRONG/*.c")
if (MSVC)
list(APPEND api_files ../TR_BUILD/trlib.def)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /D _ROUT")
endif()
if (CMAKE_COMPILER_IS_GNUCXX)
message("gcc used")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DTHREAD_SAFE -O2 -Wall")
else()
add_definitions(-DTHREAD_SAFE)
endif()
if(NOT CMAKE_BUILD_TYPE MATCHES "Release")
add_definitions(-D_ROUT)
set(CMAKE_VERBOSE_MAKEFILE  ON) 
endif()
add_library (tr SHARED ${files} ${geometric_geodesy_files} ${physical_geodesy_files} ${utilities_files} ${generic_transformation_files} ${specific_transformation_files} ${metadata_files} ${api_files} ${lord_files} ${strong_files})
